# tinker-cookbook

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/checkpoints/: SKILL.md
.claude/skills/ci/: SKILL.md
.claude/skills/completers/: SKILL.md
.claude/skills/contributing/: SKILL.md
.claude/skills/datasets/: SKILL.md
.claude/skills/distillation/: SKILL.md
.claude/skills/dpo/: SKILL.md
.claude/skills/environments/: SKILL.md
.claude/skills/evals/: SKILL.md
.claude/skills/grpo/: SKILL.md
.claude/skills/hyperparams/: SKILL.md
.claude/skills/logging/: SKILL.md
.claude/skills/manage-skills/: SKILL.md
.claude/skills/models/: SKILL.md
.claude/skills/multiturn-rl/: SKILL.md
.claude/skills/new-recipe/: SKILL.md
.claude/skills/renderers/: SKILL.md
.claude/skills/rlhf/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/sft/: SKILL.md
.claude/skills/tinker-cli/: SKILL.md
.claude/skills/tinker-sdk/: SKILL.md
.claude/skills/tinker-types/: SKILL.md
.claude/skills/weights/: SKILL.md
.github/workflows/: downstream-compat.yaml  nightly.yaml  publish-pypi.yaml  pyright.yaml  pytest.yaml  smoke-test-evals.yaml  smoke-test-recipes.yaml
docs/: dev-tips.mdx  model-lineup.mdx  rendering.mdx  support.mdx  training-sampling.mdx
docs/api-reference/: exceptions.md  restclient.md  samplingclient.md  serviceclient.md  trainingclient.md  types.md
experiments/arc/: run_arc.sh  start_arc.py
experiments/bird/: infer.py  run_bird.sh  start_bird.py  sweep.sh
experiments/deepscaler_math/: process_datasets.py  run_deepscaler.sh  start_deepscaler.py
experiments/lexam/: run_lexam.sh  start_lexam.py
scripts/: eurus_math_qwen3_5_27b_tinker.sh  eurus_math_qwen3_5_4b.sh  eurus_math_qwen3_5_4b_tinker.sh  mix_code_qwen3_5_27b_tinker.sh  mix_code_qwen3_5_4b_tinker.sh  synsql_qwen3_5_4b_tinker.sh
tests/: compare_sampling_training_logprobs.py  conftest.py  count_adapter_parameters.py  download_adapters.py  extract_adapters.py  helpers.py  test_inspect_eval.py  test_modal_sandbox.py  validate_temperature_logprobs.py
tests/downstream_compat/: conftest.py  sig_helpers.py  test_checkpoint_utils.py  test_cli_and_hyperparam.py  test_completers.py  test_model_info.py  test_recipes.py  test_renderers.py  test_rl_train.py  test_rl_types.py  test_supervised.py  test_tokenizer_utils.py  test_utils.py
tests/recipes/: test_recipe_chat_sl.py  test_recipe_dpo.py  test_recipe_guess_number.py  test_recipe_math_rl.py  test_recipe_off_policy_reasoning.py  test_recipe_on_policy_distillation.py  test_recipe_on_policy_multi_teacher.py  test_recipe_rlhf_pipeline.py  test_recipe_shorter.py  test_recipe_text_arena.py  test_recipe_twenty_questions.py  test_recipe_vlm_classifier.py
tests/weights/: test_download.py  test_export.py  test_lifecycle.py  test_publish.py  test_quantized.py  test_quantized_equivalence.py  test_strategy_consistency.py
tinker_cookbook/: __init__.py  checkpoint_utils.py  checkpoint_utils_test.py  cli_utils.py  cli_utils_test.py  display.py  exceptions.py  exceptions_test.py  hyperparam_utils.py  image_processing_utils.py  image_processing_utils_test.py  model_info.py  model_info_test.py  renderers.py  tokenizer_utils.py  tokenizer_utils_test.py
tinker_cookbook/chat_app/: tinker_chat_cli.py
tinker_cookbook/distillation/: datasets.py  train_on_policy.py
tinker_cookbook/eval/: custom_evaluators.py  custom_inspect_task.py  evaluators.py  inspect_evaluators.py  inspect_utils.py  inspect_utils_test.py  run_inspect_evals.py
tinker_cookbook/preference/: comparison_policy_evaluator.py  dpo_datasets.py  preference_datasets.py  train_dpo.py  types.py
tinker_cookbook/recipes/: rl_basic.py  rl_loop.py  sl_basic.py  sl_loop.py
tinker_cookbook/recipes/chat_sl/: README.md  chat_datasets.py  train.py
tinker_cookbook/recipes/code_rl/: README.md  code_env.py  train.py
tinker_cookbook/recipes/distillation/: off_policy_reasoning.py  on_policy_distillation.py  on_policy_distillation_harbor_multi_turn.py  on_policy_multi_teacher.py
tinker_cookbook/recipes/harbor_rl/: README.md  eval.py  harbor_env.py
tinker_cookbook/recipes/math_rl/: README.md  arithmetic_env.py  math_env.py  math_grading.py  train.py
tinker_cookbook/recipes/mix_code_rl/: code_grading.py  mix_code_env.py  train.py
tinker_cookbook/recipes/mix_general_rl/: grading.py  mix_general_env.py  train.py
tinker_cookbook/recipes/rubric/: data.py  (+5 more)
tinker_cookbook/renderers/: __init__.py  base.py  deepseek_v3.py  deepseek_v3_test.py  gpt_oss.py  gpt_oss_test.py  kimi_k2.py  kimi_k25.py  kimi_k25_test.py  kimi_k2_5_tool_declaration_ts.py  kimi_k2_tool_declaration_test.py  nemotron3.py  nemotron3_test.py  parsing_test.py  qwen3.py  qwen3_5.py  qwen3_test.py  qwen3_tool_declaration_test.py  renderers_test.py  role_colon.py  testing_utils.py  tool_calling_test.py
tinker_cookbook/rl/: data_processing.py  message_env.py  message_env_test.py  metric_util.py  metrics.py  multiturn_weight_assignment_test.py  play_w_env.py  preference_envs.py  problem_env.py  rollout_error_resilience_test.py  rollout_logging.py  rollout_strategy.py  rollouts.py  shutdown_test.py  train.py  types.py
tinker_cookbook/sandbox/: modal_sandbox.py  sandbox_interface.py
tinker_cookbook/scripts/: merge_tinker_adapter_to_hf_model.py  test_tool_calling_e2e.py
tinker_cookbook/supervised/: common.py  data.py  nll_evaluator.py  resume_test.py  train.py  types.py  viz_sft_dataset.py
tinker_cookbook/tool_use/: agent_tool_message_env.py  agent_tool_message_env_test.py  tools.py
tinker_cookbook/utils/: __init__.py  deprecation.py  deprecation_test.py  file_utils.py  format_colorized.py  logtree.py  logtree_formatters.py  lr_scheduling.py  misc_utils.py  ml_log.py  ml_log_test.py  trace.py  trace_test.py
tinker_cookbook/weights/: __init__.py  _artifacts.py  _download.py  _merge.py  _merge_qwen3_5.py  _merge_utils.py  _publish.py  artifacts_test.py  download_test.py  export_test.py  merge_test.py  publish_test.py  quantized_test.py  stress_test.py
tinker_cookbook/xmux/: control.py  core.py  run_job.py
(+39 files in other folders)
